@@ -1,3 +1,6 @@
+2009-07-08 Maximilien Cuony
+    * Assistant done, except translations
+
 2009-07-04 Maximilien Cuony
     * Removing warning when erasing saved password
     * FS#305
